--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <!-- Boxicons CSS -->
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
-  <title>React App</title>
+  <title>Expense Tracker</title>
 </head>
 
 <body>
